@@ -1,3 +1,7 @@
+2011-06-03  Werner Koch  <wk@g10code.com>
+
+	* basic.c (main): Add option --die.
+
 2011-05-27  Daiki Ueno  <ueno@unixuser.org>
 
 	* basic.c (check_pubkey_crypt): Add test data with invalid padding.
